Fix z-index of scaled diagrams.

--- a/sass/card.scss
+++ b/sass/card.scss
@@ -14,6 +14,9 @@
     .static_size {
         transform-origin: top left;
         transform: scale(0.75);
+        // Fixes diagrams scrolling through header
+        position: relative;
+        z-index: -10;
     }
 }
 
